--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+<h1>Express</h1>
+<p>Welcome to Express</p>
+<script src="./index.js" type="application/javascript">
+</script>
 </body>
 
 </html>
